--- a/samples/server/petstore/jaxrs-spec-microprofile-openapi-annotations/pom.xml
+++ b/samples/server/petstore/jaxrs-spec-microprofile-openapi-annotations/pom.xml
@@ -15,13 +15,13 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-plugin.version>3.0.1.Final</quarkus-plugin.version>
-    <quarkus.platform.version>3.0.1.Final</quarkus.platform.version>
+    <quarkus-plugin.version>1.1.1.Final</quarkus-plugin.version>
+    <quarkus.platform.version>1.1.1.Final</quarkus.platform.version>
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
-    <jakarta.ws.rs-version>3.1.0</jakarta.ws.rs-version>
-    <jakarta.annotation-api-version>2.1.1</jakarta.annotation-api-version>
+    <javax.ws.rs-version>2.1.1</javax.ws.rs-version>
+    <javax.annotation-api-version>1.3.2</javax.annotation-api-version>
     <io.swagger.annotations.version>1.6.10</io.swagger.annotations.version>
   </properties>
   <dependencyManagement>
@@ -55,15 +55,15 @@
       <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
     <dependency>
-       <groupId>jakarta.ws.rs</groupId>
-       <artifactId>jakarta.ws.rs-api</artifactId>
-       <version>${jakarta.ws.rs-version}</version>
+       <groupId>javax.ws.rs</groupId>
+       <artifactId>javax.ws.rs-api</artifactId>
+       <version>${javax.ws.rs-version}</version>
        <scope>provided</scope>
     </dependency>
     <dependency>
-       <groupId>jakarta.annotation</groupId>
-       <artifactId>jakarta.annotation-api</artifactId>
-       <version>${jakarta.annotation-api-version}</version>
+       <groupId>javax.annotation</groupId>
+       <artifactId>javax.annotation-api</artifactId>
+       <version>${javax.annotation-api-version}</version>
     </dependency>
      <dependency>
         <groupId>io.swagger</groupId>
