--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
       - name: Run maven
-        run: mvn --no-snapshot-updates --batch-mode --quiet install -DskipTests -Dmaven.javadoc.skip=true
+        run: mvn --no-snapshot-updates --batch-mode --quiet install -DskipTests
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
       - name: Setup Gradle
