--- a/.github/workflows/samples-java-helidon.yaml
+++ b/.github/workflows/samples-java-helidon.yaml
@@ -21,7 +21,7 @@ jobs:
           - samples/client/petstore/java-helidon-client/se
           - samples/server/petstore/java-helidon-server/mp
           - samples/server/petstore/java-helidon-server/se
-        version: [11, 17]
+        version: [17]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
