--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,25 +13,27 @@ install:
         [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\maven-bin.zip", "C:\maven")
       }
   # install gradle
-  - ps: |
-      Add-Type -AssemblyName System.IO.Compression.FileSystem
-      if (!(Test-Path -Path "C:\gradle\gradle-7.6" )) {
-        (new-object System.Net.WebClient).DownloadFile(
-          'https://services.gradle.org/distributions/gradle-7.6-bin.zip',
-          'C:\gradle-bin.zip'
-        )
-        [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\gradle-bin.zip", "C:\gradle")
-      }
+  #- ps: |
+  #    Add-Type -AssemblyName System.IO.Compression.FileSystem
+  #    if (!(Test-Path -Path "C:\gradle\gradle-7.6" )) {
+  #      (new-object System.Net.WebClient).DownloadFile(
+  #        'https://services.gradle.org/distributions/gradle-7.6-bin.zip',
+  #        'C:\gradle-bin.zip'
+  #      )
+  #      [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\gradle-bin.zip", "C:\gradle")
+  #    }
   - cmd: SET PATH=C:\maven\apache-maven-3.8.3\bin;C:\gradle\gradle-7.6\bin;%JAVA_HOME%\bin;%PATH%
   - cmd: SET MAVEN_OPTS=-Xmx4g
   - cmd: SET JAVA_OPTS=-Xmx4g
   - cmd: SET M2_HOME=C:\maven\apache-maven-3.8.3
   - cmd: java -version
-  - cmd: gradle -v
+    #- cmd: gradle -v
   - cmd: dir/w
-  - git clone https://github.com/wing328/swagger-samples --depth 1
-  - ps: Start-Process -FilePath 'C:\maven\apache-maven-3.8.3\bin\mvn' -ArgumentList 'jetty:run' -WorkingDirectory "$env:appveyor_build_folder\swagger-samples\java\java-jersey-jaxrs-ci"
-  - ps: Start-Sleep -s 15
+    #- git clone https://github.com/wing328/swagger-samples --depth 1
+    #- ps: Start-Process -FilePath 'C:\maven\apache-maven-3.8.3\bin\mvn' -ArgumentList 'jetty:run' -WorkingDirectory "$env:appveyor_build_folder\swagger-samples\java\java-jersey-jaxrs-ci"
+    #- ps: Start-Sleep -s 15
+  - sh: docker pull swaggerapi/petstore
+  - sh: docker run -d -e SWAGGER_HOST=http://petstore.swagger.io -e SWAGGER_BASE_PATH=/v2 -p 80:8080 swaggerapi/petstore 
   - ps: $PSVersionTable.PSVersion
   - ps: Install-Module -Name Pester -Force -Scope CurrentUser
 build_script:
@@ -73,7 +75,7 @@ build_script:
   # install openapi-generator locally
   - mvn --no-snapshot-updates --quiet clean install -Dorg.slf4j.simpleLogger.defaultLogLevel=error
   # run the locally installed openapi-generator-gradle-plugin
-  - gradle -b modules\openapi-generator-gradle-plugin\samples\local-spec\build.gradle buildGoSdk --stacktrace
+  #- gradle -b modules\openapi-generator-gradle-plugin\samples\local-spec\build.gradle buildGoSdk --stacktrace
 test_script:
   # test c# API client (multiple frameworks)
   - dotnet test samples\client\petstore\csharp-netcore\OpenAPIClientCoreAndNet47\src\Org.OpenAPITools.Test\Org.OpenAPITools.Test.csproj
