--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,8 +31,8 @@ install:
   - cmd: dir/w
     #- git clone https://github.com/wing328/swagger-samples --depth 1
     #- ps: Start-Process -FilePath 'C:\maven\apache-maven-3.8.3\bin\mvn' -ArgumentList 'jetty:run' -WorkingDirectory "$env:appveyor_build_folder\swagger-samples\java\java-jersey-jaxrs-ci"
-  - sh: docker pull swaggerapi/petstore
-  - sh: docker run -d -e SWAGGER_HOST=http://petstore.swagger.io -e SWAGGER_BASE_PATH=/v2 -p 80:8080 swaggerapi/petstore 
+  - cmd: docker pull swaggerapi/petstore
+  - cmd: docker run -d -e SWAGGER_HOST=http://petstore.swagger.io -e SWAGGER_BASE_PATH=/v2 -p 80:8080 swaggerapi/petstore 
   - ps: Start-Sleep -s 120
   - ps: $PSVersionTable.PSVersion
   - ps: Install-Module -Name Pester -Force -Scope CurrentUser
