--- a/.github/workflows/check-supported-versions.yaml
+++ b/.github/workflows/check-supported-versions.yaml
@@ -12,13 +12,6 @@ jobs:
       matrix:
         java: [11, 17]
         os: [ubuntu-latest]
-        include:
-          - java: 11
-            os: windows-latest
-          - java: 17
-            os: ubuntu-latest
-            # Need to update to Gradle version with v17 support in modules/openapi-generator-gradle-plugin/pom.xml
-            flags: -am -pl modules/openapi-generator-cli -Dmaven.javadoc.skip=true -Dmaven.test.skip=true
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -47,7 +40,7 @@ jobs:
 
       - name: Build with Maven
         shell: bash
-        run: mvn -nsu -B --quiet -Djacoco.skip=true -Dorg.slf4j.simpleLogger.defaultLogLevel=error --no-transfer-progress clean install --file pom.xml ${{ matrix.flags }}
+        run: mvn -nsu -B --quiet -Djacoco.skip=true -Dorg.slf4j.simpleLogger.defaultLogLevel=error --no-transfer-progress clean install --file pom.xml
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
 
@@ -78,9 +71,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-#         include:
-#           - os: windows-latest
-#             flags: --skip-docs
     steps:
       - name: Check out code
         uses: actions/checkout@v3
