--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -38,6 +38,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
+      - name: Setup Maven
+        uses: s4u/setup-maven-action@v1.7.0
+        with:
+          maven-version: 3.9
       - name: Run maven
         run: mvn --no-snapshot-updates --batch-mode --quiet install
         env:
