--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -47,6 +47,7 @@ jobs:
       - name: Setup Maven
         uses: s4u/setup-maven-action@v1.7.0
         with:
+          java-version: ${{ matrix.java }}
           maven-version: 3.9.0
 
       - name: Build with Maven
@@ -88,6 +89,7 @@ jobs:
       - name: Setup Maven
         uses: s4u/setup-maven-action@v1.7.0
         with:
+          java-version: ${{ matrix.java }}
           maven-version: 3.9.0
       - name: Download build artifact
         uses: actions/download-artifact@v3
