--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Setup Maven
         uses: s4u/setup-maven-action@v1.7.0
         with:
+          java-version: ${{ matrix.java }}
           maven-version: 3.9
       - name: Run maven
         run: mvn --no-snapshot-updates --batch-mode --quiet install
